<resources>
    <string name="app_name">QuickNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LowFilter">Low</string>
    <string name="MediumFilter">Medium</string>
    <string name="HighFilter">High</string>
    <string name="AnswerYes">Yes</string>
    <string name="AnswerNo">No</string>
    <string name="QuestionDelete">Are you sure you want to\ndelete this Note?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_weather">activity_weather</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>